# DBusQTClient

./: .gitignore  CMakeLists.txt  README.md  dbusClient.h  dbusclient.cpp  main.cpp
